--- a/website/template/input.html
+++ b/website/template/input.html
@@ -8,22 +8,45 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <title>Input Page</title>
+  <style>
+    form {
+      margin-left: 200px;
+      margin-right: 200px;
+      margin-top: 50px;
+    }
+  </style>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="{% url 'welcome' %}">Logout</a>
+        <a class="nav-link" aria-current="page" href="{% url 'logout' %}">Logout</a>
+        <a class="nav-link active" aria-current="page" href="{% url 'input' %}">Input page</a>
+        <a class="nav-link" aria-current="page" href="">Analysis page</a>
       </div>
     </div>
   </nav>
-  <div class="text-center" style="margin-top: 50px;">
-    <div>
-        Please select respiratory sound recording file
+  {% for message in messages %}
+    <div class="alert alert-danger" role="alert">
+      {{ message }}
     </div>
-    <input type="file" name="file">
-  </div>
+    {% endfor %}
+  <form action="" method="post">
+    {% csrf_token %}
+    <div class="text-center" style="margin-top: 50px;">
+      <div class="mb-3">
+        <input type="text" class="form-control" name="patientId" placeholder=" Enter patient id">
+      </div>
+      <div>
+        Please select respiratory sound recording file
+        <input type="file" name="file" accept="audio/*">
+      </div>
+      <div style="margin-top: 20px;">
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
+    </div>
+  </form>
 </body>
 
 </html>
